--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .App {
-  text-align: center;
+  /*text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center;*/
   padding: 0;
   margin: 0;
+  width: 100%;
+ 
+
 }
 
