--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,17 +1,26 @@
 .about{
   /*background-color: blue; */
-  margin-top: 26%;
-  height: 300px;
+  margin-top: 7%;
+  height: 100%;
+  display: flex;
+  flex: 3;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+
+  
+
  
   
 }
 .services{
-  margin-top: -6%;
+ 
   font-weight: bolder;
   font-size: xx-large;
-  margin-left: -300px;
   color: red;
   font-style: inherit;
+  margin-left: 30%;
   
 }
 
@@ -24,27 +33,26 @@
 }
 
 .welcome{
-  width: 550px;
-  height: 230px;
+  width: 32%;
+  height: 100%;
   background-color: rgb(207, 10, 148);
-  margin-top: 4%;
-  padding-top: 40px;
+  padding-top: 30px;
   padding-right:10px ;
   border-radius: 30px;
   color: black;
   font-size: xx-large;
   font-weight: 1000;
   justify-content: center;
+  padding-left: 10%;
  
   
 }
 
 .front-end{
 background-color: green;
-width: 570px;
-height: 250px;
-margin-left: 650px;
-margin-top: -13%;
+width: 32%;
+height: 100%;
+padding-left: 10%;
 border-radius: 30px;
 justify-content: center;
 padding-top: 1%;
@@ -57,10 +65,9 @@ padding-top: 1%;
 
 .back-end{
 background-color: yellow;
-width: 570px;
-height: 250px;
-margin-left: 1300px;
-margin-top: -13%;
+width: 32%;
+height: 100%;
+padding-left: 10%;
 border-radius: 30px;
 padding-top: 1%;
 
@@ -72,26 +79,24 @@ padding-top: 1%;
 }
 
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 790px) {
 
-  .services {
-    margin-left: -15px;
-    margin-top: 60%;
-    }
+ 
+  .services{
+    margin-left: 10%;
+  }
     .welcome{
-      width: 460px;
+      width: 100%;
     }
     .front-end{
-      width: 470px;
-      height: 250px;
-      margin-left: 0px;
-      margin-top: 10%;
+      width: 100%;
+      height: 50%;
+    
     }
     .back-end{
-      width: 470px;
-      height: 250px;
-      margin-left: 0px;
-      margin-top: 10%;
+      width: 100%;
+      height: 50%;
+     
 
     }
   }
