--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -1,20 +1,44 @@
-.left{
-  margin-top: 60px;
-  margin-left: 10px;
+
+
+.container-1{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: -2%;
+  margin-left: 17%;
+
  
-  width: 500px;
-  height: 250px;
-  padding-top: 40px;
+  
+}
+
+.container-1 div{
+ 
+  padding:10px;
+}
+
+
+.box-2{
+  flex: 1;
+  order: 2;
+  transform: 0.2%;
+
+
+}
+
+.box-1{
+  flex: 1;
+  order: 1;
+
 }
 
 .button{
-  margin-top: 30px;
   background-color: red;
   height: 40px;
   border-radius: 25px;
   font-weight: bold;
   color: azure;
   border-color: blue;
+  margin-top: 10%;
 }
 
 .button:hover{
@@ -24,8 +48,7 @@
 }
 
 .name {
-  display: flex;
-  flex-direction: column;
+ 
   gap: 5px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -47,42 +70,5 @@
   color: green;
   
 }
-
-.right{
-  width: 500px;
-  height: 250px;
-  flex: 1;
-  position: relative;
-  left: 36%;
-  margin-top: -20%;
-  transform: scale(0.7);
-  border-color: blue;
-  
-}
-
-
-@media screen and (max-width: 480px) {
-
-  .left {
-    width: 450px;
-    }
-    .right{
-      left: -45%;
-      transform: scale(0.6);
-      margin-top: -5%;
-    }
-  }
- 
-
-
-
-
-
-
-
-
-
-
-
 
 
