--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -3,8 +3,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 600px;
-  margin-top: 100px;
+  height: 60%;
+  margin-top: 10%;
 
 }
 /* heading */
@@ -24,19 +24,21 @@
   overflow: visible!important;
 }
 .portfolio-slider {
-margin-top: 3rem;
+margin-top: 10%;
 width: 100%;
 }
 .portfolio-slider .swiper-slide {
-width: 400px;
+width: 100%;
 }
 .portfolio img {
-width: 900px;
+width: 100%;
 filter: drop-shadow(-12px 15px 13px rgba(73, 14, 212, 0.25));
 border-radius: 19px;
 }
 
-@media screen and (max-width: 480px) {
+
+/*
+@media screen and (max-width: 790px) {
   .portfolio-slider {
    
     width: 100%;
@@ -56,4 +58,4 @@ border-radius: 19px;
     .portfolio-slider .swiper-slide {
       width: 100px;
       }
-  }
+  } */
