--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -1,6 +1,6 @@
 .t-wrapper{
   padding: 0 3rem 0 3rem;
-  height: 400px;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,7 +33,7 @@ flex-direction: column;
 align-items: center;
 justify-content: space-evenly;
 padding: 2rem;
-width: 30rem;
+width: 80%;
 height: 19rem;
 background: rgba(255, 255, 255, 0.26);
 border: 7px solid blue;
@@ -70,12 +70,12 @@ border-radius: 20px;
 }
 
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 790px) {
  
     .t-wrapper{
-      margin-top: -10%;
-      width: 470px;
-      margin-left: -49px;
+    
+      width: 70%;
+     
 
     }
     
